test/expected/explain_frg_v.out
explain void f(register i)
               ^
16: error: named parameters can not be void
